# hoa-fuma

./: .gitignore  Makefile  README.md  eslint.config.mjs  mdx-components.tsx  next.config.mjs  package.json  pnpm-lock.yaml  source.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
app/: global.css  layout.tsx
app/(home)/: page.tsx
app/(home)/blog/: page.tsx
app/docs/: page.tsx
app/docs/[year]/: layout.tsx
app/ui/: sidebar-banner.tsx  year-selector.tsx
components/: course-info.tsx
components/file-tree/: columns.tsx  ctx.ts  data-table.tsx  file.tsx  files.tsx  folder.tsx  index.ts  table.tsx  toolbar.tsx  types.ts  utils.tsx
components/sidebar/: sidebar-banner.tsx  year-selector.tsx
components/ui/: checkbox.tsx  circular-progress.tsx  file-upload.tsx
content/blog/access-github/: index.mdx
lib/: download.ts  layout.shared.tsx  source.ts  source.tsx  types.ts
repos/: AUTO1001.mdx  AUTO2001.mdx  AUTO2003B.mdx  AUTO2006.mdx  AUTO3001A.mdx  AUTO3001B.mdx  AUTO3002A.mdx  AUTO3002B.mdx  AUTO3003.mdx  AUTO3004.mdx  AUTO3005.mdx  AUTO3006.mdx  AUTO3007.mdx  AUTO3011.mdx  AUTO3012.mdx  AUTO3016.mdx  AUTO3019.mdx  AUTO3022.mdx  AUTO3024.mdx  AUTO3028.mdx  AUTO3099.mdx  AUTO5001.mdx  AUTO5002.mdx  AUTO5005.mdx  AUTO5013.mdx  AUTO5023.mdx  AUTO5024.mdx  CHEM1012.mdx  COMP1011.mdx  COMP2001.mdx  COMP2008.mdx  COMP2010.mdx  COMP2012.mdx  COMP2014.mdx  COMP2029.mdx  COMP2030.mdx  COMP2050.mdx  COMP2051.mdx  COMP2052.mdx  COMP3001.mdx  (+83 more)
scripts/: Makefile  build.py  format_mdx.py  main.py  pyproject.toml  tree_utils.py
(+317 files in other folders)
