[project]
name = "hoa-ci"
version = "0.1.0"
description = "Build course pages from HOA."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "githubkit>=0.14.3",
    "python-dotenv>=1.2.1",
    "rich>=14.3.1",
]

[tool.ruff.lint]
select = ["F", "E", "W", "N", "I", "ANN", "PTH"]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
